raffia/tests/error/scss/at-rule/forward/with-extra-comma.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `,`
  ┌─ with-extra-comma.scss:1:30
  │
1 │ @forward "other" with ($a: b,,);
  │                              ^


